# gispulse-portal

./: .gitignore  Dockerfile.portal  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  release.yml
assets/: CatalogExtentMap-C-sIaqFK.js  CatalogWorkspace-DVM_S5HI.js  DatasetsView-vp6b_m_3.js  ExplorerView-CnHUUE9t.js  LoginPage-CbMPs00a.js  MapView-DnbfS8RL.js  MarketplacePage-DaJhf7Uz.js  NodeEditor-CSqNXXaC.js  ScenariosPanel-C7pY-uiR.js  SchemaView-4cfkBT38.js  WorkflowEditorHeader-BKTpHJ0j.js  WorkflowList-CF3UjSvq.js  WorkflowsView-C82YFF5t.js  arrow-right-CvmapD_A.js  catalog-BkCzKaa4.js  createLucideIcon-CTGDkFh6.js  dist-yZr3-USZ.js  esm-CoYlvPLG.js  geo-display-tcsnfpll.js  graphSerializer-DbzTeT4t.js  index-CI4Qm-xt.css  index-DLj2zdJb.js  jsx-runtime-BoIn6XbI.js  maplibre-C0lhlV37.js  pipelines-CjUZgY6s.js  react-CKPQOi-m.js  react-DTgOAyf5.js  request-DP4UNZ-j.js  workflowStore-DHLdt9zz.js  workflowTemplates-Delh4LER.js  zoom-in-CLr-r_MW.js
docs/: AUDIT_PLAN_2026_05_16.md
gispulse_portal/: __init__.py
src/: index.css  main.tsx  router.tsx
src/__tests__/: MixedContentBanner.test.tsx  ModeBanner.test.tsx  ModeToggle.test.tsx  SchemaForm.test.tsx  SchemaFormI18n.test.tsx  SettingsPanel.test.tsx  StyleEditorPanel.qml.test.tsx  backendUrl.test.ts  breadcrumb.test.ts  colorRamps.test.ts  fuzzySearch.test.ts  geoDisplay.test.ts  keyboardShortcuts.test.ts  layerStyle.test.ts  liveEventStore.test.ts  onboarding.test.ts  request.test.ts  responsive.test.ts  router.test.ts  sceneStore.test.ts  settingsStore.test.ts  setup.ts  styleConverter.test.ts  styleEditors.test.tsx  stylesApi.test.ts  uiStore.test.ts  worldwideAggregator.test.tsx
src/api/: auth.ts  catalog.ts  client.ts  cocarteMaps.ts  datasets.ts  filter.ts  marketplace.ts  pipelines.ts  projects.ts  relations.ts  request.ts  scenarios.ts  schedules.ts  styles.ts
tests/: __init__.py  test_packaging.py
(+229 files in other folders)
