[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-portal"
version = "2.0.0"
description = "Pre-built web UI for GISPulse — ships the SPA so `gispulse portal` can serve it same-origin on localhost."
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "ImagoData", email = "contact@imagodata.com"},
]
keywords = ["gis", "geospatial", "ui", "portal", "spa", "gispulse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    # The portal is meaningful only alongside the gispulse engine.
    # Lockstep version bump keeps the SPA <-> backend contract honest.
    "gispulse>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0,<2.0",
    "pytest>=9.0,<10.0",
]

[project.urls]
Homepage = "https://gispulse.dev"
Documentation = "https://docs.gispulse.dev"
Repository = "https://github.com/imagodata/gispulse-portal"
Issues = "https://github.com/imagodata/gispulse-portal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gispulse_portal*"]
exclude = ["tests*", "node_modules*", "src*", "public*", "dist*"]

[tool.setuptools.package-data]
# Ship the entire built SPA tree as package data. The ``release.yml``
# workflow copies the ``./dist`` produced by ``pnpm build`` into
# ``gispulse_portal/dist`` before invoking ``python -m build``.
gispulse_portal = ["dist/**/*", "dist/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
